Stop the header from shifting when the page loads

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -49,15 +49,12 @@ ul.links {
     padding: 0;
     margin: 0;
     li {
-        @extend .animate-all;
+        transition: 0.4s background;
         position: relative;
         display: inline;
         padding: 3px 10px;
         text-align: center;
         font-weight: 600;
-        &:first-of-type {
-            // padding-left: 0;
-        }
         a {
             line-height: 1.8em;
         }
@@ -89,7 +86,6 @@ ul.links {
 }
 
 div.search {
-    @extend .animate-all;
     z-index: 1;
     background: #ffffff;
     margin: -12px 0;
@@ -155,7 +151,7 @@ div.search {
 }
 
 .international {
-    @extend .animate-all;
+    transition: 0.4s box-shadow;
     background: #ffffff;
     position: absolute;
     right: -12px;
